Split get balance api
